--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,8 @@
     <script src="./ramwin1_deffie_hellman.js"></script>
 </head>
 <body>
-
+    <h1>
+        Press F12 and see the result in the console.
+    </h1>
 </body>
 </html>
